--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-# Nombre del archivo: requirements.txt
-Flask
-Flask-Cors
-requests
-beautifulsoup4
-gunicorn
+Flask==2.3.2
+Flask-Cors==3.0.10
+requests==2.28.1
+beautifulsoup4==4.12.2
+gunicorn==20.1.0
